cambios 04 diciembre clase